# pfpp

./: CMakeLists.txt
doc/: PotentialFlow.tex
src/: aerodynamics.h  binary_stl_parser.cpp  binary_stl_parser.h  program.cpp  source_panel_method.h  triangular_source_panel.h
tests/: IncludingLAPPWorks.cpp  SourcePanelMethodFindSourceStrengths_GivenUnitCubeInput_SatisfiesTangentialFlow.cpp  TriangularSourcePanelArea_GivenValidInput_ReturnsCorrectArea.cpp  TriangularSourcePanelCentroid_GivenValidInput_ReturnsCorrectCentroid.cpp  TriangularSourcePanelComputeCentroid_GivenValidInput_SetsTheCorrectCentroid.cpp  TriangularSourcePanelComputeSurfaceArea_GivenValidInput_SetsTheCorrectSurfaceArea.cpp
