cmake_minimum_required(VERSION 3.16.3)

project(pfpp)

include(FetchContent)

FetchContent_Declare(
	lapp
	GIT_REPOSITORY	https://github.com/Siim-Alas/lapp.git
	GIT_TAG		origin/main
)

FetchContent_MakeAvailable(lapp)

enable_testing()

add_executable(IncludingLAPPWorks tests/IncludingLAPPWorks.cpp)
add_test(IncludingLAPPWorks IncludingLAPPWorks)

add_executable(SourcePanelMethodFindSourceStrengths_GivenUnitCubeInput_SatisfiesTangentialFlow tests/SourcePanelMethodFindSourceStrengths_GivenUnitCubeInput_SatisfiesTangentialFlow.cpp)
add_test(SourcePanelMethodFindSourceStrengths_GivenUnitCubeInput_SatisfiesTangentialFlow SourcePanelMethodFindSourceStrengths_GivenUnitCubeInput_SatisfiesTangentialFlow)

add_executable(TriangularSourcePanelArea_GivenValidInput_ReturnsCorrectArea tests/TriangularSourcePanelArea_GivenValidInput_ReturnsCorrectArea.cpp)
add_test(TriangularSourcePanelArea_GivenValidInput_ReturnsCorrectArea TriangularSourcePanelArea_GivenValidInput_ReturnsCorrectArea)

add_executable(TriangularSourcePanelCentroid_GivenValidInput_ReturnsCorrectCentroid tests/TriangularSourcePanelCentroid_GivenValidInput_ReturnsCorrectCentroid.cpp)
add_test(TriangularSourcePanelCentroid_GivenValidInput_ReturnsCorrectCentroid TriangularSourcePanelCentroid_GivenValidInput_ReturnsCorrectCentroid)

