cmake_minimum_required(VERSION 3.16.3)

project(pfpp)

include(FetchContent)

FetchContent_Declare(
	lapp
	GIT_REPOSITORY	https://github.com/Siim-Alas/lapp.git
	GIT_TAG		origin/main
)

FetchContent_MakeAvailable(lapp)

add_executable(pfpp src/aerodynamics.h src/binary_stl_parser.cpp src/binary_stl_parser.h src/program.cpp src/source_panel_method.h src/triangular_source_panel.h)

enable_testing()

add_executable(IncludingLAPPWorks tests/IncludingLAPPWorks.cpp)
add_test(IncludingLAPPWorks IncludingLAPPWorks)

add_executable(SourcePanelMethodFindSourceStrengths_GivenUnitCubeInput_SatisfiesTangentialFlow tests/SourcePanelMethodFindSourceStrengths_GivenUnitCubeInput_SatisfiesTangentialFlow.cpp)
add_test(SourcePanelMethodFindSourceStrengths_GivenUnitCubeInput_SatisfiesTangentialFlow SourcePanelMethodFindSourceStrengths_GivenUnitCubeInput_SatisfiesTangentialFlow)

add_executable(TriangularSourcePanelComputeCentroid_GivenValidInput_SetsTheCorrectCentroid tests/TriangularSourcePanelComputeCentroid_GivenValidInput_SetsTheCorrectCentroid.cpp)
add_test(TriangularSourcePanelComputeCentroid_GivenValidInput_SetsTheCorrectCentroid TriangularSourcePanelComputeCentroid_GivenValidInput_SetsTheCorrectCentroid)

add_executable(TriangularSourcePanelComputeSurfaceArea_GivenValidInput_SetsTheCorrectSurfaceArea tests/TriangularSourcePanelComputeSurfaceArea_GivenValidInput_SetsTheCorrectSurfaceArea.cpp)
add_test(TriangularSourcePanelComputeSurfaceArea_GivenValidInput_SetsTheCorrectSurfaceArea TriangularSourcePanelComputeSurfaceArea_GivenValidInput_SetsTheCorrectSurfaceArea)

